# mastodon-spam-checker

./: .env.example  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
locales/: en.yml  ja.yml
src/: config.rs  http.rs  llm.rs  main.rs  mastodon.rs  postgres.rs  redis.rs  server.rs  slack.rs
