[package]
name = "mastodon-spam-checker"
version = "0.2.3"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
dotenvy = "0.15"
redis = { version = "1.3", default-features = false, features = ["tokio-comp"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "http2", "rustls-no-provider"] }
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7.1"
tokio = { version = "1", features = ["rt", "macros", "net", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = true
strip = true
panic = "abort"
opt-level = "z"
codegen-units = 1
