[package]
name = "mastodon-spam-checker"
version = "0.2.3"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = { version = "0.8.9", default-features = false, features = ["http1", "tokio"] }
dotenvy = "0.15.7"
redis = { version = "1.4.0", default-features = false, features = ["tokio-comp"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "http2", "rustls-no-provider"] }
ring = "0.17.14"
rustls = { version = "0.23.42", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_urlencoded = "0.7.1"
tokio = { version = "1", features = ["rt", "macros", "net", "signal", "time"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[profile.release]
lto = true
strip = true
panic = "abort"
opt-level = "z"
codegen-units = 1
