[package]
name = "mastodon-spam-checker"
version = "0.4.1"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
axum = { version = "0.8.9", default-features = false, features = ["http1", "tokio"] }
dotenvy = "0.15.7"
redis = { version = "1.4.1", default-features = false, features = ["tokio-comp"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "http2", "rustls-no-provider"] }
ring = "0.17.14"
rustls = { version = "0.23.42", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
serde_urlencoded = "0.7.1"
rust-i18n = "4.2.1"
tokio = { version = "1.53.1", features = ["rt", "macros", "net", "signal", "time"] }
tokio-postgres = { version = "0.7.18", default-features = false, features = ["runtime"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[profile.release]
lto = true
strip = true
panic = "abort"
opt-level = "z"
codegen-units = 1
